PR/46360: YAMAMOTO Takashi: Restore NetBSD-5 compatibility with putenv() copying the passed string (which is not ToG compliant), instead of using it directly in the environment arrat as it should. Needs to be pulled up to NetBSd-6.